--- a/meindicaai-next-react/styles/Home.module.css
+++ b/meindicaai-next-react/styles/Home.module.css
@@ -9,14 +9,19 @@
 
 
 .logo {
-  position: absolute;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 126px;
   height: 126px;
-  left: calc(50% - 126px/2 + 7px);
-  top: calc(50% - 126px/2 - 144px);
+  left: 34%;
+  top: 10%;
+  
   background: #888181;
   border-radius: 50%;
-
+  margin-right: 0;
+  margin-bottom: 15px;
 }
 
 .login {
@@ -48,7 +53,8 @@
   padding: 12px 132px;
   margin:auto;
   margin-top: 15px;
-
+  font-size: 18px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 312px;
   height: 45px;
   left: 59px;
@@ -57,5 +63,35 @@
   background: #FD1E4A;
   border-radius: 100px;
   color: beige;
- 
+}
+
+.esqueceusenha {
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+margin-top: 10px;
+
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 21px;
+/* identical to box height */
+
+color: #2D2D2F;
+}
+
+.btncriarconta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  color: #FD1E4A;
 }
